Corrected Button spacing

--- a/13-news-homepage/style.css
+++ b/13-news-homepage/style.css
@@ -205,7 +205,7 @@ body{
                         color: var(--Dark_grayish_blue);
                     }
                     button{
-                        margin-bottom: 30px;
+                        margin-bottom: 10px;
                     }
                 }
             }
